# aics-shparam

./: .buildinfo  .bumpversion.cfg  .gitignore  BUILD.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.html  README.md  aicsshparam.bin.html  aicsshparam.html  build.gradle  contributing.html  genindex.html  gradle.properties  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  settings.gradle  setup.cfg  setup.py  test.vtk  tox.ini
.github/workflows/: build-docs.yml  build-main.yml  test-and-lint.yml
_modules/: aicsshparam.html  index.html
_modules/aicsshparam/: shparam.html  shtools.html
_sources/: aicsshparam.bin.rst.txt  aicsshparam.rst.txt  modules.rst.txt
aicsshparam/: __init__.py  aicsshparam.py  aicsshtools.py  example.py  shparam.py  shtools.py  version.py
aicsshparam/shapespace/: README.md  controller.py  general.py  io.py  meshtoolkit.py  plotting.py  shapemode_tools.py  shapespace.py  viz.py
aicsshparam/submodule_example/: __init__.py
aicsshparam/test/: class_type_example_test.py  test_function_type_example.py
aicsshparam/tests/: dummy_test.py  test_shapespace.py
docs/: Makefile  README.md  conf.py  index.rst  installation.rst  make.bat
